# lanun

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: case1_coastal_embayment.txt  case2_marginal_sea.txt  case3_volcanic_lake.txt  case4_estuary_plume.txt
src/lanun/: __init__.py  cli.py
src/lanun/core/: __init__.py  diagnostics.py  particles.py  solver.py  velocity.py
src/lanun/io/: __init__.py  config_manager.py  data_handler.py
src/lanun/utils/: __init__.py  logger.py
src/lanun/visualization/: __init__.py  animator.py
tests/: __init__.py  conftest.py  test_core.py
